@@ -15,6 +15,9 @@ MNEMOSYNE 1.0.2 :
 -Added import/export support for CueCard wcu files (Chris Aakre).
 -Added features to improve display of map cards from svgtoquiz (Timothy 
  Bourke).
+-Added support for Mac installer through py2app (Konrad Wojas).
+-Added <protect>...</protect> tags. Text within these tags will not be
+ touched by 'increase size of non-latin characters' (Konrad Wojas).
 -Added midi files to "import sound" file dialog (suggested by Johan Forsberg).
 -Make dvipng invocation more robust. Especially helpful for Ubuntu users.
  (Thanks to Stephen Boulet and franny1).
